# Homework

./: 0001_initial.py  admin.py  asgi.py  db.sqlite3  manage.py  models.py  settings.py  urls.py  workspace.xml  wsgi.py  Урок №10. Домашнее задание.py  Урок №11. Домашнее задание..py  Урок №12. Домашнее задание..py  Урок №13. Домашнее задание.py  Урок №16. Домашнее задание.py  Урок №2. Домашнее задание.py  Урок №3. Домашнее задание.py  Урок №4. Домашнее задание.py  Урок №5. Домашнее задание.py  Урок №6. Домашнее задание.py  Урок №9. Домашнее задание.py
Recommendations_app/: App.py  Base.py  annotations.py  generators.py
blog_1/: db.sqlite3
blog_1/blog_1/: settings.py  urls.py
blog_1/publication_1/: admin.py  apps.py  models.py  urls.py  views.py
lesson_15/: main.py  pyproject.toml  requirements.txt  Урок №15. Домашнее задание.py
lesson_17/: manage.py
lesson_17/application/: models.py
lesson_17/lesson_17/: asgi.py  settings.py  urls.py  wsgi.py
lesson_18/blog/: db.sqlite3
lesson_19/myproject_1/: db.sqlite3
lesson_20/: annotations.py  main.py  recommendations.py
lesson_21/: main.py
lesson_21/classes/: book.py  car.py  person.py
lesson_21/functions/: calculate.py
lesson_21_NEW/annotations_app/: student_annotations.py  student_dataclass.py  student_namedtuple.py  student_typeddict.py
lesson_23/myproject_2/: db.sqlite3
lesson_23_NEW/myproject_3/: db.sqlite3
lesson_24/myproject_4/: db.sqlite3
lesson_25/myproject_5/: db.sqlite3  manage.py
myproject/: db.sqlite3
myproject/myapp/: admin.py  models.py
myproject/myproject/: settings.py
(+57 files in other folders)
