[tool.poetry]
name = "lesson-15"
version = "0.1.0"
description = ""
authors = ["Валерия"]
readme = "README.md"
packages = [{include = "lesson_15"}]

[tool.poetry.dependencies]
python = "3.11.4"
cowsay = "^5.0"
django = "^4.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
